# stuff

./: .gitignore  add_sparse_mat.cpp  anavi.cpp  linear_search.csv  log.txt  nary2.py  sparse_mat.cpp  stringToInt.cpp  table.csv  test.cpp
Extras/: Economics of Project Management.pptx  UE213020_OOPS_LAB.docx  {Auto}Clubs And Events Organizer.pptx
Extras/test/: CMakeLists.txt  Untitled-1.cpp  color.cpp  dummy.cpp  dummy.out  example.cpp  file.cpp  file.txt  progm.cpp  temp.cpp  time.cpp
ai_lab/: KKnightsUpdated.cpp  UE213020_alpha_beta_min_max.py  UE213020_beam.py  UE213020_beam_level.py  UE213020_beam_node.py  UE213020_bfs_dfs.py  UE213020_iter_dfs.py  UE213020_min_max.py  UE213020_ticTacToe.py  UE213020_ticTacToe_MagicSquare.py  alpha_beta_min_max.py  data_analysis.cpp  dfs_test.py  k_knights.py  minMax.py  min_max.py  min_max1.cpp  min_max3.cpp  min_max_ab_tester.py  mixed.py  mixed_back.py  mixed_old.py  scrambler.py  tempCodeRunnerFile.py  ticTacToe.py  tic_tac_toe.cpp
analysis/: 9_prims.py  arshia.py  linear.py  linear_2.py  linear_search.csv  narry  narry.cpp  test.cpp  test.py
business intelligence/: BI_1_UE213020.ipynb  BI_2_UE213020.ipynb  BI_3_UE213020.ipynb  BI_4_UE213020.ipynb  BI_5_UE213020.ipynb  UE213020_practical 7.ipynb  UE213020_practical10.ipynb  UE213020_practical6.ipynb  UE213020_practical9.ipynb
cns/: hammingDistance.py
compiler_design/: back.txt  lex2.c  lex_analyzer.cpp  lex_analyzer_back.cpp  output.txt  t1.c  test.c  test.h  test.i  test2.cpp
computer_graphics/: ayush.cpp  csvHandler.cpp  csvHandler.hpp  hargun.cpp
computer_graphics/circle/: CMakeLists.txt  circle.cpp
computer_graphics/conn_dots/: CMakeLists.txt  test.py
computer_graphics/dda/: CMakeLists.txt  backup.cpp  line2.cpp  main.cpp  main_float.cpp  menu_glui.cpp  menu_opengl.cpp  menu_opengl_backip.cpp  simple_dda_mouse.cpp  simple_dda_terminal.cpp  simple_parallel.cpp  symm_dda_mouse.cpp  symm_dda_terminal.cpp
computer_graphics/ellipse/: CMakeLists.txt  ellipse.cpp  ellipse.csv  ellipse_backup.cpp  ellipse_helper.cpp  ellipse_helper.hpp  test.cpp
computer_graphics/filling/: Boundaryfilling.cpp  CMakeLists.txt  ScanLineFilling.cpp  ScanLineFilling2.cpp  boundaryFIll.cpp  boundaryFIll2.cpp  boundary_fill.cpp  extra.txt  scanLineFilling3.cpp
computer_graphics/test/: CMakeLists.txt  checkerboard.cpp  concentricPoly.cpp  hargun.cpp  hargun2.cpp  line.cpp  pattern.cpp  semicircleinsquare.cpp  test.cpp
computer_graphics/transformation/: CMakeLists.txt  pointMatrix.hpp  test.cpp  test2.cpp  transformations.cpp
cpp_programming/: new.cpp  t2.cpp  tempCodeRunnerFile.cpp  test.cpp
data_modeling/: 7_Scikit_iris_Logistic.ipynb  Exercise 7 UE213020.ipynb  Exercise 8 UE213020.ipynb  UE213020_Exercise_10.py  UE213020_age.py  UE213020_array_sort_column.py  UE213020_country_mean.py  UE213020_date_to_tup.py  UE213020_dice_odds.py  UE213020_drop.py  UE213020_histogram.py  UE213020_hot_encode.py  UE213020_local_maxima.py  UE213020_min_max_cust_id.py  UE213020_parameters_of_unitprice.py  UE213020_pass.py  UE213020_result.py  UE213020_sort_age_name.py  UE213020_stride.py  UE213020_word_frequencies.py  UE213020_year_month_sales.py  UE213020_zero_val.py  college.csv  exercise 10.ipynb  exercise6.py  exercise6_q1.py  file.txt  max_list_of_lists.py  nirf.csv  sublist_in_list.py  test.cpp  test.py  vehicle.csv  word_scram.py
dip/: practical_1.py  practical_2.py  practical_3.py  practical_4.py  practical_5.py
dsa/: dummy.cpp  quick.cpp  two_d_array.cpp
dsa_impl/: bubblesort.cpp  cab.cpp  heapsort.cpp  insertionSort.cpp  mergeSort.cpp  quickSort.cpp  selectionsort.cpp
dsa_lab/: Untitled-1.cpp  double_swap.cpp  file_prog4.cpp  file_prog_06_09.cpp  foof_fung.cpp  inc.cpp  low_tri.cpp  main.c  main_rec.cpp  search.h  search_max.c  search_min.c  static.c  test.cpp  test_pre.cpp  tt.cpp  upper_tri.cpp
fast_api/: main.py
flask/: database.csv  database.txt  test.py
info_test/: beaut_perm.cpp  orange.cpp  pal.cpp  pal2.cpp  sold.cpp  sold2.cpp  sold3.cpp  test_1_2.cpp  test_2_1.cpp  test_2_2.cpp
java/: Solution.java
leetcode/: cch2.cpp  coinChange.cpp  combSumiv.cpp  jumpGame.cpp  maxbintree.cpp  numberofislands.cpp  populatenext.cpp  remove_max_edge.cpp  shortestcommonsuper.cpp  sortedSquare.cpp  test.cpp  test.py  test2.cpp  towerofHanoi.cpp
microprocessor_lab/: ADD_15.asm  LOADER.asm  LOADER_16.asm  N_BYTES.asm  N_BYTES_2.asm  SUPERB_DELAY.asm  TWOS_COMPLEMENT_SERIES.asm  ZERO_TO_NINE.asm  ZERO_TO_NINE_V2.asm  birthday.asm  compare_five.asm  gates.asm  (+8 more)
(+1531 files in other folders)
